Turn custom JS into a module

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/style.css">
     
     <title>Page d'accueil - Les Petits Plats</title>
+    <!-- Custom JS -->
+    <script src="js/app.js" type="module"></script>
 </head>
 <body class="container-md">
 
