--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header class="title container">
         <div class="row justify-content-center">
             <figure class="col-md-6 logo-container">
-                <img src="assets/logo.png" alt="Logo Les Petits Plats" class="logo">
+                <a href="index.html">
+                    <img src="assets/logo.png" alt="Logo Les Petits Plats" class="logo">
+                </a>
             </figure>
         </div>
     </header>
@@ -85,7 +87,6 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <!-- Custom JS -->
-    <script src="js/app.js"></script>
+    
 </body>
 </html>
