Turn mainSearch into a HTML form

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         <section class ="search container row">
             <div class="row">
                 <div class="form-group has-search container-fluid">
-                    <input type="text" class="form-control form-control-lg bg-light" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
-                    <span class="fa fa-search form-control-feedback"></span>
+                    <form id="mainSearch">
+                        <input type="text" class="form-control form-control-lg bg-light" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette" id="mainSearchInput">
+                        <span class="fa fa-search form-control-feedback"></span>
+                    </form>
+                </div>
+            </div>
                 </div>
             </div>
 
