Turn HTML Results section into a JS generated one

--- a/index.html
+++ b/index.html
@@ -67,23 +67,8 @@
                 </div>
             </div>
         </section>
-        <section class="results container row">
-            <div class="row gy-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title recipe">Card Title</h5>
-                        <h5 class="card-title duration">10 min</h5>
-                        <p class="card-text ingredients">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </p>
-                        <p class="card-text steps">
-                            Some steps to follow in order to make that recipe a success!
-                        </p>
-                        <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
-                    </div>
-                </div>
-            </div>
+        <section id="results" class="results container row row-cols-1 row-cols-md-3 g-4">
+
         </section>
     </main>
 
