ADD a div for future hashtags

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     </form>
                 </div>
             </div>
+
+            <div class="row">
+                <div id="hashtags" class="hashtags">
+
                 </div>
             </div>
 
