UDT option value in HTML

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
             <div class="row">
                 <div class="d-grip gap-2 col-10 d-md-flex justify-content-md-end">
                     <select class="form-select btn-primary col-xs-4" id="selectIngredient">
-                        <option value="">
+                        <option value="" selected disabled hidden>
                             Ingrédients
                         </option>
                     </select>        
                     <select class="form-select btn-success" id="selectAppliance">
-                        <option value="">
+                        <option value="" selected disabled hidden>
                             Appareil
                         </option>
                     </select>
                     <select class="form-select btn-danger" id="selectUstensil">
-                        <option value="">
+                        <option value="" selected disabled hidden>
                             Ustensiles
                         </option>
                     </select>
