--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <title>Page d'accueil - Les Petits Plats</title>
     <!-- Custom JS -->
-    <script src="js/app.js" type="module"></script>
+    <script src="./js/app.js" type="module"></script>
 </head>
 <body class="container-md">
 
