--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="./assets/favicon.ico" />
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="./assets/fontawesome.css">
     <link rel="stylesheet" href="./css/style.css">
     
     <title>Page d'accueil - Les Petits Plats</title>
