--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="referrer" content="origin">
 
-    <link rel="icon" type="image/png" href="./assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.ico" />
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
